examples/pass/types/enum_match.dew
// expect: 2
// Enum with multiple variants and exhaustive match.
enum Direction { North, South, East, West }
def direction_value = fn(d: Direction) -> Int {
  match d {
    North => 0,
    South => 2,
    East => 1,
    West => 3,
  }
};
def main = fn { direction_value(South) -> stdout; };
